partial/force-app/main/default/objects/Room__c/fields/Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Dimensions__c</fullName>
    <label>Dimensions</label>
    <length>30</length>
    <type>Text</type>
</CustomField>