partial/force-app/main/default/objects/Room__c/fields/Dimensions_Alt__c.field-meta.xml
<CustomField>
    <fullName>Dimensions_Alt__c</fullName>
    <label>Dimensions Alt</label>
    <length>30</length>
    <type>Text</type>
</CustomField>